<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/tableLayout"
             android:background="@android:color/white"
             android:padding="5dp"
             android:stretchColumns="*">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/tableRow0">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/queryEditText"
            android:hint="@string/queryPrompt"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:layout_span="2"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tableRow1">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/tagPrompt"
            android:imeOptions="actionDone"
            android:layout_gravity="center_vertical"
            android:id="@+id/tagEditText"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_gravity="center_vertical"
            android:id="@+id/saveButton"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_orange"
        android:id="@+id/tableRow2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/taggedSearches"
            android:textColor="@android:color/black"
            android:padding="5dp"
            android:layout_span="2"
            android:textSize="18sp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/taggedSearchesTextView"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tableRow3"
        android:background="@color/light_orange"
        android:layout_weight="1">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:padding="5dp"
            android:id="@+id/queryScrollView">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/queryTableLayout"
                android:padding="5dp"
                android:stretchColumns="*">
            </TableLayout>
        </ScrollView>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tableRow4">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clearTags"
            android:id="@+id/clearTagButton"
            android:layout_span="2"
            android:layout_marginTop="5dp"/>
    </TableRow>
</TableLayout>